--- a/index.html
+++ b/index.html
@@ -3,18 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="./styles/main-css.css" />
+    <title>Sebastian Lonczyk Web Developer</title>
+    <link rel="stylesheet" href="./styles/main-style.css" />
     <script
       src="https://kit.fontawesome.com/1d53cd833e.js"
       crossorigin="anonymous"></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <span>Landing Side</span>
+      <div class="dropdown">
+        <button class="dropbtn">Menu</button>
+        <div id="dropdownContent" class="dropdown-content">
+          <a href="#">Home</a>
+          <a href="#">About Me</a>
+          <a href="#">Links</a>
+          <a href="#">Why Not!</a>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>About Me</li>
+          <li><a href="#"></a>Links</li>
+          <li><a href="#"></a>Why Not!</li>
+        </ul>
+      </nav>
+    </header>
 
-    <main></main>
+    <main>
+      <div>
+        <div class="banner">
+          <h1 class="banner__heading">Junior Web Developer</h1>
+          <p class="banner__text">
+            I design and code beautifully simple things, and I love what I do.
+          </p>
+          <img
+            class="banner__img"
+            src="./picture/tisch.jpg"
+            alt="coding workspace" />
+        </div>
+      </div>
+
+      
+    </main>
 
     <footer></footer>
-
   </body>
 </html>
