--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         </ul>
       </nav>
     </header>
-
+    <!-- part1 -->
     <main>
       <div>
         <div class="banner">
           <h1 class="banner__heading">Junior Web Developer</h1>
-          <p class="banner__text">
+          <p class="banner__text p_text">
             I design and code beautifully simple things, and I love what I do.
           </p>
           <img
@@ -44,8 +44,39 @@
             alt="coding workspace" />
         </div>
       </div>
-
-      
+      <!-- part2 -->
+      <div class="performance">
+        <div class="performance__container">
+          <h2 class="performance__heading">
+            Hello, I'm Sebastian. Nice to meet you.
+          </h2>
+          <p class="performance__text p_text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+            quam at suscipit itaque dolorum reiciendis. Alias natus cupiditate
+            excepturi. Cupiditate consequuntur temporibus quasi, doloribus
+            necessitatibus molestiae a voluptates. Similique, hic? (Platzhalter
+            für ein kurzes über mich)
+          </p>
+        </div>
+      </div>
+      <!-- part3 -->
+      <section class="card">
+        <div class="sticky">
+          <div>
+            <div class="card__container">
+              <h3 class="card__heading ">Frontend Developer</h3>
+              <p class="card__text card__padding">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Officia, alias fuga. Natus soluta impedit nisi.
+              </p>
+              <p class="card__languages card__padding">Languages I speak:</p>
+              <p class="card__speaks card__padding">HTML, CSS, Sass, Git, Javascript</p>
+              <p class="card__tools_head card__padding">Dev Tools</p>
+              <p class="card__tools card__padding">Bootstrap <br />Github <br>VS Code <br></p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
