--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <nav>
-        <ul>
+        <ul class="dropdown__list">
           <li><a href="#"></a>Home</li>
           <li><a href="#"></a>About Me</li>
           <li><a href="#"></a>Links</li>
@@ -38,10 +38,11 @@
           <p class="banner__text p_text">
             I design and code beautifully simple things, and I love what I do.
           </p>
-          <img
+          <div class="banner__img"></div>
+          <!-- <img
             class="banner__img"
             src="./picture/tisch.jpg"
-            alt="coding workspace" />
+            alt="coding workspace" /> -->
         </div>
       </div>
       <!-- part2 -->
@@ -69,16 +70,121 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Officia, alias fuga. Natus soluta impedit nisi.
               </p>
-              <p class="card__languages card__padding">Languages I speak:</p>
-              <p class="card__speaks card__padding">HTML, CSS, Sass, Git, Javascript</p>
-              <p class="card__tools_head card__padding">Dev Tools</p>
-              <p class="card__tools card__padding">Bootstrap <br />Github <br>VS Code <br></p>
+              <h4 class="card__languages card__padding">Languages I speak:</h4>
+              <!-- <p class="card__speaks card__padding">HTML, CSS, Sass, Git, Javascript</p> -->
+              <ul class="card__speaks card__padding">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Sass</li>
+                <li>Git</li>
+                <li>Javascript</li>
+              </ul>
+              <h4 class="card__tools_head card__padding">Dev Tools:</h4>
+              <ul class="card__list">
+                <li>Bootstrap</li>
+                <li>Github</li>
+                <li>VS Code</li>
+              </ul>
+              <!-- <p class="card__tools card__padding">Bootstrap <br />Github <br>VS Code <br></p> -->
             </div>
           </div>
         </div>
       </section>
-    </main>
-
-    <footer></footer>
-  </body>
+        <!-- part4 -->
+        <section class="projects">
+          <div class="projects__banner">
+              <h2 class="projects__heading">My Projects</h2>
+          </div>
+      </section>
+      <!-- part5 -->
+      <section class="project-cards">
+          <div>
+              <div class="grid-container">
+                  <div class="grid-item">Projet 1</div>
+                  <div class="grid-item">Projet 2</div>
+                  <div class="grid-item">Projet 3</div>
+                  <div class="grid-item">Projet 4</div>
+                  <div class="grid-item">Projet 5</div>
+                  <div class="grid-item">Projet 6</div>
+              </div>
+          </div>
+      </section>
+      <!-- part6 -->
+      <form action="">
+          <div class="contact">
+              <div class="contact__container">
+                  <h2 class="contact__heading">Contact Me</h2>
+                  <p class="contact__text p_text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+                      quam at suscipit itaque dolorum reiciendis. Alias natus cupiditate
+                      excepturi. Cupiditate consequuntur temporibus quasi, doloribus
+                      necessitatibus molestiae a voluptates. Similique, hic?
+                  </p>
+                  <div class="contact__form">
+                      <input type="text" placeholder="Name" />
+                      <input type="email" placeholder="Email" />
+                      <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                      <button class="c0ntact__button">Send</button>
+                  </div>
+              </div>
+          </div>
+      </form>  
+  </main>
+  <footer></footer>
+</body>
 </html>
+
+
+
+<!-- .contact {
+  background-color: $amber;
+  width: 100%;
+
+  .contact__heading {
+      padding-top: 50px;
+      padding-bottom: 50px;
+      text-align: center;
+  }
+
+  .contact__text {
+      width: 60%;
+      padding-bottom: 50px;
+      text-align: center;
+      margin: auto;
+  }
+
+  .contact__form {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding-bottom: 100px;
+
+      input {
+          width: 50%;
+          padding: 10px;
+          margin: 10px;
+          border-radius: 5px;
+          border: none;
+      }
+
+      textarea {
+          width: 50%;
+          padding: 10px;
+          margin: 10px;
+          border-radius: 5px;
+          border: none;
+      }
+
+      button {
+          width: 50%;
+          padding: 10px;
+          margin: 10px;
+          border-radius: 5px;
+          border: none;
+          background-color: $blue-violet;
+          color: white;
+          font-weight: bold;
+      }
+  }
+} -->
