aufräumen+formspree_test

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
           <div>
             <div class="card__container">
               <h3 class="card__heading">Frontend Developer</h3>
-              <p class="card__text card__padding">
+              <p class="card__text card-padding">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Officia, alias fuga. Natus soluta impedit nisi.
               </p>
-              <h4 class="card__languages card__padding">Languages I speak:</h4>
-              <ul class="card__speaks card__padding">
+              <h4 class="card__languages card-padding">Languages I speak:</h4>
+              <ul class="card__speaks card-padding">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Sass</li>
@@ -118,7 +118,8 @@
         </div>
       </section>
       <!-- part6 -->
-      <form action="">
+      <form action="https://formspree.io/f/xnqezylp"
+      method="post">
         <div id="contact" class="contact">
           <div class="contact__container">
             <h2 class="contact__heading">Contact Me</h2>
@@ -143,6 +144,7 @@
         </div>
       </form>
     </main>
+    <!-- footer -->
     <footer>
       <nav class="footer__nav">
         <ul class="footer-nav__list">
