--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <main>
       <div  id="home">
         <div class="banner">
+          <!-- <div class="banner__logo"></div> -->
           <h1 class="banner__heading">Junior Web Developer</h1>
           <p class="banner__text p_text">
             I design and code beautifully simple things, and I love what I do.
